// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocTemplate should render a default component with nothing 1`] = `
<div
  className="doc-template"
/>
`;

exports[`DocTemplate should show multiple examples 1`] = `
<div
  className="doc-template"
>
  <h1
    className=".examples-header"
  >
    Examples
  </h1>
  <ExampleTemplate
    description="Describing the test"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="0"
    title="Test Example 1"
  />
  <ExampleTemplate
    description="Describing the test mk. 2"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="1"
    title="Test Example 2"
  />
</div>
`;

exports[`DocTemplate should show multiple props tables 1`] = `
<div
  className="doc-template"
>
  <PropsTable
    componentName="Test Component"
    key="0"
    src="test-file-stub"
  />
  <PropsTable
    componentName="Test Component (Again)"
    key="1"
    src="test-file-stub"
  />
</div>
`;

exports[`DocTemplate should show one example 1`] = `
<div
  className="doc-template"
>
  <h1
    className=".examples-header"
  >
    Example
  </h1>
  <ExampleTemplate
    description="Describing the test"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="0"
    title="Test Example 1"
  />
</div>
`;

exports[`DocTemplate should show one props table 1`] = `
<div
  className="doc-template"
>
  <PropsTable
    componentName="Test Component"
    key="0"
    src="test-file-stub"
  />
</div>
`;

exports[`DocTemplate should show the readme 1`] = `
<div
  className="doc-template"
>
  <Markdown
    src="test-file-stub"
  />
</div>
`;

exports[`DocTemplate should show the version 1`] = `
<div
  className="doc-template"
>
  <a
    href="https://www.npmjs.org/package/terra-doc-template"
  >
    <img
      alt="NPM version"
      src="https://img.shields.io/npm/v/terra-doc-template.svg"
    />
  </a>
</div>
`;

exports[`DocTemplate should show the version and readme 1`] = `
<div
  className="doc-template"
>
  <a
    href="https://www.npmjs.org/package/terra-doc-template"
  >
    <img
      alt="NPM version"
      src="https://img.shields.io/npm/v/terra-doc-template.svg"
    />
  </a>
  <Markdown
    src="test-file-stub"
  />
</div>
`;

exports[`DocTemplate should show the version, readme, source link, examples, and props tables 1`] = `
<div
  className="doc-template"
>
  <a
    href="https://www.npmjs.org/package/terra-doc-template"
  >
    <img
      alt="NPM version"
      src="https://img.shields.io/npm/v/terra-doc-template.svg"
    />
  </a>
  <Markdown
    src="test-file-stub"
  />
  <a
    href="https://github.com/cerner/terra-core/tree/master/packages/terra-doc-template"
  >
    View component source code
  </a>
  <h1
    className=".examples-header"
  >
    Examples
  </h1>
  <ExampleTemplate
    description="Describing the test"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="0"
    title="Test Example 1"
  />
  <ExampleTemplate
    description="Describing the test mk. 2"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="1"
    title="Test Example 2"
  />
  <PropsTable
    componentName="Test Component"
    key="2"
    src="test-file-stub"
  />
  <PropsTable
    componentName="Test Component (Again)"
    key="3"
    src="test-file-stub"
  />
</div>
`;
